<resources>
    <string name="app_name">Recipes</string>
    <string name="cook_easily">Cook Easily</string>
    <string name="cook_easily_text">Cooking recipes step by step</string>
    <string name="next">Next</string>
    <string name="share_recipes">Share recipes</string>
    <string name="share_recipes_text">Share your own recipes</string>
    <string name="favorites">Favorites</string>
    <string name="favorites_text">Save your favorite recipes</string>
    <string name="start">Start</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="recipes">Recipes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Already have an account? Log in</string>
    <string name="repeat_password">Repeat password</string>
    <string name="create_account">Create Account</string>
    <string name="or">OR</string>
    <string name="google_signup">Sign up with google</string>
    <string name="clientId">1053791992784-ivakecke5k6g50j1us28v2c6pvtgp6o1.apps.googleusercontent.com</string>
    <string name="loading">Loading…</string>
    <string name="reset">Reset Password</string>
    <string name="reset_email">Enter your email</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="ingredients">Ingredients</string>
    <string name="method">Method</string>
    <string name="username">Username</string>
    <string name="search_by_name">Search by name...</string>
    <string name="search_by_ing">Search by ingredient...</string>
    <string name="categories">Categories</string>
    <string name="log_out">Log out</string>
    <string name="change_password">Change password</string>
    <string name="edit">Edit</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="save">save</string>
    <string-array name="spinner">
        <item>Name</item>
        <item>Ingredient</item>
    </string-array>
</resources>