<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.signup_login.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_accaunt"
            android:textColor="@color/primary_green_dark"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:src="@drawable/ic_signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <View
            android:id="@+id/info_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/onboarding_info_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:background="@color/white"
            android:hint="@string/email"
            android:inputType="textPersonName|textEmailAddress"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textColor="@color/primary_green_dark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img"
            app:layout_constraintVertical_bias="0.1"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textColor="@color/primary_green_dark"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email"/>

        <EditText
            android:id="@+id/edt_repeat_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textColor="@color/primary_green_dark"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create_accaunt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/primary_green_dark"
            android:paddingVertical="8dp"
            android:text="@string/create_accaunt"
            android:textAllCaps="false"
            android:gravity="center"
            android:textColor="@color/primary_green_light"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_repeat_password"/>

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register"
            android:textColor="@color/primary_green_light"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/btn_create_accaunt"
            app:layout_constraintTop_toBottomOf="@+id/btn_create_accaunt" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/or"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/btn_create_accaunt"
            app:layout_constraintStart_toStartOf="@id/btn_create_accaunt"
            app:layout_constraintTop_toBottomOf="@id/tv_forget_password" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/google_signup"
            android:textColor="@color/primary_green_dark"
            android:textSize="20sp"
            android:gravity="center"
            android:textAllCaps="false"
            android:layout_marginTop="12dp"
            android:drawableStart="@drawable/ic_google"
            app:layout_constraintEnd_toEndOf="@+id/btn_create_accaunt"
            app:layout_constraintStart_toStartOf="@+id/btn_create_accaunt"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>